--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_colorpicker: ^1.1.0
+  two_dimensional_scrollables: ^0.3.3
 
 dev_dependencies:
   flutter_test:
